--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,24 @@
 #buttonContainer {
-    min-width: 100vw;
+  min-width: 100vw;
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+  background-color: aquamarine;
+  border: 1px solid black;
+  height: 25%;
+  width: 100%;
+}
+
+div {
+  border: 1px solid black;
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+  height: 60px;
+  width: 50px;
+  padding: 25px;
+  margin: 10px 10px 10px 10px;
+  align-items: center;
 }
