Drum Kit Challenge- based on template v1.2

--- a/style/style.css
+++ b/style/style.css
@@ -8,9 +8,10 @@
   border: 1px solid black;
   height: 25%;
   width: 100%;
+  font-family: "Montserrat", sans-serif;
 }
 
-div {
+p {
   border: 1px solid black;
   display: flex;
   justify-content: center;
@@ -21,4 +22,10 @@ div {
   padding: 25px;
   margin: 10px 10px 10px 10px;
   align-items: center;
+  box-shadow: 0 2px 2px 4px lightseagreen;
+  text-align: center;
+}
+
+p:hover {
+  background-color: white;
 }
